--- a/app3_counterApp/package.json
+++ b/app3_counterApp/package.json
@@ -1,23 +1,16 @@
 {
-  "name": "app2_typescript",
+  "name": "app3_counter_app",
   "version": "1.0.0",
   "main": "build/index.js",
   "license": "MIT",
   "private": true,
   "scripts": {
     "build": "tsc",
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
+    "dev:start": "tsc && electron ."
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.66",
-    "@electron-forge/maker-deb": "^6.0.0-beta.66",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.66",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.66",
-    "@electron-forge/maker-zip": "^6.0.0-beta.66",
     "@types/node": "^18.7.16",
-    "electron": "20.1.3",
+    "electron": "^20.1.3",
     "electron-reload": "^2.0.0-alpha.1",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
@@ -30,34 +23,7 @@
   "dependencies": {
     "@types/jquery": "^3.5.14",
     "bootstrap": "^5.2.1",
-    "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^8.1.0",
     "jquery": "^3.6.1"
-  },
-  "config": {
-    "forge": {
-      "packagerConfig": {},
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "app2_typescript"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
-        }
-      ]
-    }
   }
 }
