--- a/app4_createApp/package.json
+++ b/app4_createApp/package.json
@@ -90,8 +90,11 @@
   "dependencies": {
     "@types/bootstrap": "^5.2.4",
     "@types/jquery": "^3.5.14",
+    "@types/node-xlsx": "^0.15.3",
+    "@types/xlsx": "^0.0.36",
     "bootstrap": "^5.2.1",
     "electron-squirrel-startup": "^1.0.0",
-    "jquery": "^3.6.1"
+    "jquery": "^3.6.1",
+    "node-xlsx": "^0.21.0"
   }
 }
