--- a/app5_createApp5/package.json
+++ b/app5_createApp5/package.json
@@ -95,6 +95,7 @@
     "bootstrap": "^5.2.1",
     "electron-squirrel-startup": "^1.0.0",
     "jquery": "^3.6.1",
-    "node-xlsx": "^0.21.0"
+    "node-xlsx": "^0.21.0",
+    "socket.io": "^4.6.1"
   }
 }
