--- a/app5_createApp5/package.json
+++ b/app5_createApp5/package.json
@@ -6,8 +6,9 @@
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
-    "package": "electron-forge package",
+    "package": "electron-forge package ",
     "make": "electron-forge make",
+    "import": "electron-forge import",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx ."
   },
@@ -24,14 +25,21 @@
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "app4_createapp"
+            "name": "app4_createapp",
+            "exe": "app.exe",
+            "authors": "YOU"
           }
         },
         {
           "name": "@electron-forge/maker-zip",
           "platforms": [
-            "darwin"
+            "darwin",
+            "win32"
           ]
+        },
+        {
+          "name": "@electron-forge/maker-wix",
+          "config": {}
         },
         {
           "name": "@electron-forge/maker-deb",
@@ -70,6 +78,7 @@
     "@electron-forge/maker-deb": "^6.0.0-beta.66",
     "@electron-forge/maker-rpm": "^6.0.0-beta.66",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.66",
+    "@electron-forge/maker-wix": "^6.0.5",
     "@electron-forge/maker-zip": "^6.0.0-beta.66",
     "@electron-forge/plugin-webpack": "6.0.0-beta.66",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -77,6 +86,8 @@
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "css-loader": "^6.0.0",
     "electron": "20.1.3",
+    "electron-winstaller": "^5.1.0",
+    "electron-wix-msi": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
     "fork-ts-checker-webpack-plugin": "^7.2.1",
